Agregó detalles responsive con Flexbox

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,25 @@
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: rgb(233, 233, 233);
 }
 
 header {
     background-color: #eac926;
-    padding-bottom: 20px;
+    padding: 20px;
+}
+
+main{
+    width: 90%;
+    margin: auto;
+    box-sizing: border-box;
+}
+
+footer{
+    background-color: rgb(224, 224, 224);
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
 }
 
 h2{
@@ -15,6 +30,12 @@ h3{
     font-size: 16px;
 }
 
+.main-header-top-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .precio{
     font-size: 18px;
 }
@@ -23,18 +44,25 @@ h3{
     font-size: 16px;
 }
 
-.centrar{
-    text-align: center;
+.justify-right{
+    text-align: right;
+    display: none;
+}
+
+.logo{
+    margin: 0 10px 0 0;
 }
 
 .input{
     background-color: white;
     border: solid 1px grey;
-    padding: 2px;
+    padding: 10px;
     width: 90%;
     text-align: center;
     margin: auto;
-    margin-top: 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+    max-width: 200px;
 }
 
 .menu-bars{
@@ -45,18 +73,20 @@ h3{
     max-width: 30px;
     border-radius: 10px;
     margin: auto;
+    margin-top: 10px;
 }
 
-ul.sin-bullet {
+.sin-bullet{
+    display: none;
+    text-decoration: none;
+}
+
+.sin-bullet ul {
     list-style-type: none;
-}
-
-footer{
-    background-color: rgb(224, 224, 224);
-    text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 50px;
+    text-decoration: none;
+    color: #222222;
+    padding: 4px 2px;
+    margin: 0;
 }
 
 .section-footer{
@@ -68,4 +98,105 @@ footer{
     color: blue;
     text-align: center;
     font-size: 30px;
+}
+
+.lista-productos{
+    margin-top: 10px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 15px;
+}
+
+.detalle-producto{
+    border-top: solid 1px #ebebeb;
+    padding-top: 15px;
+}
+
+.descuento{
+    color: green;
+}
+
+.envio{
+    color: green;
+    border: solid green 0.5px;
+    border-radius: 100%;
+    padding: 10px;
+}
+
+.imagen-productos{
+    align-items: center;
+}
+
+.descripcion{
+    display: none;
+}
+
+@media(min-width: 361px){
+    .descripcion{
+        display: block;
+    }
+
+    .lista-productos{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+}
+
+@media (min-width: 768px){
+
+    .sin-bullet { 
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .sin-bullet ul{
+        display: flex;
+        justify-content: left;
+    }
+
+    .sin-bullet li{
+        padding: 0 8px;
+    }
+
+    .menu-bars{
+        display: none;
+    }
+
+    .justify-right{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .descripcion{
+        display: block;
+    }
+
+    .lista-productos{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    
+    .input{
+        max-width: 350px;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .main-header-top-bar, .sin-bullet{
+        max-width: 1200px;
+        margin:auto;
+    }
+
+    .sin-bullet ul {
+        padding: 25px 6px;
+    }
+
+    .input{
+        max-width: 500px;
+    }
+
+    .logo{
+        width: 250px;
+    }
+    
 }
