--- a/views/home.html
+++ b/views/home.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="/css/styles.css"> 
     <link rel="stylesheet" href="/css/normalize.css"> 
+    <link rel="icon" href="images/fav.png"> 
+
     <title>Mercado Liebre</title>
 </head>
 
@@ -43,9 +45,10 @@
     <main>
         <section>
             <h2>Basado en la ultima visita</h2>
+            <div class="main-products">
                 <article class="lista-productos">
                     <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" width="80%">
-                    <div class="detalle-producto"></div>
+                    <div class="detalle-producto">
                         <i class="fas fa-truck envio"></i>                        
                         <p class="precio">$6.770</p>
                         <p class="descuento">40% OFF</p>
@@ -79,53 +82,56 @@
                         <h3 class="descripcion">Smart TV Samsung 43"</h3>
                     </div>
                 </article>
+            </div>
         </section>
         <hr>
         <section>
             <h2>Seccion de ofertas</h2>
-            <article class="lista-productos">
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" width="80%">
-                <div class="detalle-producto">
-                    <i class="fas fa-truck envio"></i>     
-                    <p class="precio">$6.770</p>
-                    <p class="descuento">40% OFF</p>
-                    <h3 class="descripcion">Cafetera Moulinex</h3>
-                </div>
-            </article>
-            <article class="lista-productos">
-                <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook" width="80%">
-                <div class="detalle-producto">
-                    <i class="fas fa-truck envio"></i>     
-                    <p class="precio">$230.000</p>
-                    <p class="descuento">20% OFF</p>
-                    <h3 class="descripcion">Macbook Pro 2019</h3>
-                </div>
-            </article>
-            <article class="lista-productos">
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy" width="80%">
-                <div class="detalle-producto">
-                    <i class="fas fa-truck envio"></i>     
-                    <p class="precio">$70.500</p>
-                    <p class="descuento">10% OFF</p>
-                    <h3 class="descripcion">Samsung Galaxy S10</h3>
-                </div>
-            </article>
-            <article class="lista-productos">
-                <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung" width="80%">
-                <div class="detalle-producto">
-                    <i class="fas fa-truck envio"></i>     
-                    <p class="precio">$23.200</p>
-                    <p class="descuento">5% OFF</p>
-                    <h3 class="descripcion">Smart TV Samsung 43"</h3>
-                </div>
-            </article>       
+            <div class="main-products">
+                <article class="lista-productos">
+                    <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" width="80%">
+                    <div class="detalle-producto">
+                        <i class="fas fa-truck envio"></i>     
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% OFF</p>
+                        <h3 class="descripcion">Cafetera Moulinex</h3>
+                    </div>
+                </article>
+                <article class="lista-productos">
+                    <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook" width="80%">
+                    <div class="detalle-producto">
+                        <i class="fas fa-truck envio"></i>     
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% OFF</p>
+                        <h3 class="descripcion">Macbook Pro 2019</h3>
+                    </div>
+                </article>
+                <article class="lista-productos">
+                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy" width="80%">
+                    <div class="detalle-producto">
+                        <i class="fas fa-truck envio"></i>     
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% OFF</p>
+                        <h3 class="descripcion">Samsung Galaxy S10</h3>
+                    </div>
+                </article>
+                <article class="lista-productos">
+                    <img src="/images/img-tv-samsung-smart.jpg" alt="TV Samsung" width="80%">
+                    <div class="detalle-producto">
+                        <i class="fas fa-truck envio"></i>     
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% OFF</p>
+                        <h3 class="descripcion">Smart TV Samsung 43"</h3>
+                    </div>
+                </article>
+            </div>       
         </section>
     </main>
 
-    <footer>
+    <footer class="footer-main">
         <article class="section-footer">
             <div class="fa-footer">
-                <i class="fas fa-credit-card"></i>
+                <i class="fas fa-credit-card fav-footer"></i>
             </div>
             <h3>
                 Pagá con tarjeta o con efectivo
@@ -135,7 +141,7 @@
             </p>
         </article>
         <article class="section-footer">
-            <div class="fa-footer">
+            <div class="fa-footer fav-footer">
                 <i class="fas fa-gift"></i>
             </div>
             <h3>
@@ -146,7 +152,7 @@
             </p>
         </article>
         <article class="section-footer">
-            <div class="fa-footer">
+            <div class="fa-footer fav-footer">
                 <i class="fas fa-user-shield"></i>
             </div>
             <h3>
@@ -156,6 +162,7 @@
                 ¿No te gusta? Devolvelo. En Mercado Liebre no hay nada que no puedas hacer porque estas siempre protegido. 
             </p>
         </article>
+
     </footer>
 </body>
 </html>
