--- a/views/register.html
+++ b/views/register.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="/css/styles.css"> 
     <link rel="stylesheet" href="/css/normalize.css"> 
+    <link rel="icon" href="images/fav.png"> 
     <title>Mercado Liebre</title>
 </head>
 
