--- a/views/home.html
+++ b/views/home.html
@@ -28,7 +28,7 @@
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul class="right-nav">                
-                <li><a href="#">Crea tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="register.html">Crea tu cuentaaaaa <i class="far fa-id-card"></i></a></li>
                 <li><a href="#">Ingresa <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
